{
    "name": "ControlesJugador",
    "maps": [
        {
            "name": "Movimiento",
            "id": "32e7cd77-ddca-48d3-8658-f8d2da3a2f69",
            "actions": [
                {
                    "name": "Mover",
                    "type": "Value",
                    "id": "6449ca71-d887-474c-95e2-fb08fd4e79cd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "923911ee-ea1a-4375-9aff-af9ad61ed3d1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mover",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f46caf07-d3bf-4ebe-976b-22ec937557b7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mover",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f15338db-dd10-40bd-bac5-1c4542e0c8f3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mover",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7d23f3a4-fe2e-45de-a550-aef1b64b671d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mover",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ef28dfe5-28df-451b-a87c-d6d8ef23e544",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mover",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Sprint",
            "id": "73815eec-a26e-47fb-8e1e-de994817bb30",
            "actions": [
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "16e9c090-5ba2-4b68-8248-d82cab00e6b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a9e3ca58-6824-4bda-a111-427904d311a0",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Hit",
            "id": "11b674de-4208-4bf6-b11e-69e56d969b5d",
            "actions": [
                {
                    "name": "Hit",
                    "type": "Button",
                    "id": "ef537006-4ce0-44d0-844c-4fe28ce368ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "76043a7e-5c49-448a-9296-f631024131a1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Acciones",
            "id": "935b4945-85a4-4fc3-8770-92490db3eee7",
            "actions": [
                {
                    "name": "Recoger",
                    "type": "Button",
                    "id": "75fd2945-27be-464f-b7cf-e7b4db1d6692",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CambiarArma",
                    "type": "Button",
                    "id": "0ad16bf4-dd34-45be-86a7-bed14cca2d59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "47e076e0-494d-4733-b428-4f0d12f044d0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Recoger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c86c9b5-5225-4f5c-9317-b7d8ac313187",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CambiarArma",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}